alignment fixed

--- a/src/static/css/mobile.css
+++ b/src/static/css/mobile.css
@@ -80,7 +80,7 @@
   z-index: 4;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  /* text-align: right; */
   background: rgba(12, 8, 0, 0.582);
 }
 
